# Reserved for future publishing to the ComfyUI Registry (registry.comfy.org).
# Set PublisherId to your registered publisher id before publishing.
[project]
name = "comfyui-y277an-gemini"
description = "ComfyUI nodes for Google Gemini: image generation & editing (Nano Banana), Veo video, text/prompt generation, and TTS speech."
version = "0.9.0"
license = { file = "LICENSE" }
dependencies = ["google-genai>=2.10", "pillow>=9.0", "numpy>=1.21"]

[project.urls]
Repository = "https://github.com/y277an/ComfyUI-y277an-Gemini"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.comfy]
PublisherId = "y277an"
DisplayName = "ComfyUI-y277an-Gemini"
Repository = "https://github.com/y277an/ComfyUI-y277an-Gemini"
